# futures_bmad

./: .env.example  .gitignore  Cargo.toml
.github/workflows/: ci.yml
_bmad-output/brainstorming/: brainstorming-session-2026-04-12-001.md
_bmad-output/implementation-artifacts/: 1-1-cargo-workspace-and-ci-cd-setup.md  1-2-core-price-and-time-types.md  1-3-order-book-and-market-events.md  1-4-order-and-position-types.md  1-5-core-traits-and-clock.md  1-6-event-system-and-config-types.md  1-7-test-kit.md  2-1-rithmic-connection-and-market-data-subscription.md  2-2-order-book-reconstruction-from-live-feed.md  2-3-market-data-gap-detection.md  2-4-continuous-market-data-recording-to-parquet.md  2-5-historical-parquet-ingestion.md  3-1-obi-signal.md  3-2-vpin-signal.md  3-3-microprice-signal.md  3-4-structural-price-levels.md  3-5-composite-evaluation-and-fee-aware-gating.md  4-1-code-review-2026-04-30.md  4-1-sqlite-event-journal.md  4-2-code-review-2026-04-30.md  4-2-market-order-submission.md  4-3-atomic-bracket-orders.md  4-3-code-review-2026-04-30.md  4-4-code-review-2026-04-30.md  4-4-order-state-machine-and-wal-persistence.md  4-5-code-review-2026-04-30.md  4-5-position-tracking-and-broker-reconciliation.md  5-1-circuit-breaker-framework.md  5-1-code-review-2026-04-30.md  5-2-code-review-2026-04-30.md  5-2-position-and-loss-limit-breakers.md  5-3-anomalous-position-detection-and-panic-mode.md  5-3-code-review-2026-04-30.md  5-4-code-review-2026-04-30.md  5-4-infrastructure-breakers.md  5-5-code-review-2026-04-30.md  5-5-event-aware-trading-windows.md  5-6-code-review-2026-04-30.md  5-6-operator-alerting-on-circuit-breaker-events.md  6-1-code-review-2026-05-01.md  (+34 more)
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-16.md  prd.md  product-brief-futures_bmad-distillate.md  product-brief-futures_bmad.md
_bmad-output/planning-artifacts/research/: domain-futures-microstructure-strategy-research-2026-04-12.md  technical-execution-and-architecture-research-2026-04-12.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
config/: default.toml  live.toml  paper.toml
crates/broker/: Cargo.toml
crates/broker/src/: adapter.rs  connection.rs  lib.rs  market_data.rs  message_validator.rs  messages.rs  order_routing.rs  position_flatten.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/config/: alerting.rs  broker.rs  broker_mode.rs  fees.rs  mod.rs  regime.rs  trading.rs  validation.rs
crates/core/src/events/: engine.rs  fill.rs  lifecycle.rs  market.rs  mod.rs  order.rs  risk.rs  signal.rs
crates/core/src/order_book/: book.rs  mod.rs
crates/core/src/traits/: broker.rs  clock.rs  mod.rs  regime.rs  signal.rs
crates/core/src/types/: bar.rs  fixed_price.rs  mod.rs  order.rs  position.rs  side.rs  trade_source.rs  unix_nanos.rs
crates/core/tests/: fixed_price_properties.rs  order_book_properties.rs  order_state_properties.rs
crates/engine/: Cargo.toml
crates/engine/src/: buffer_monitor.rs  data_quality.rs  event_loop.rs  ingest.rs  lib.rs  main.rs  order_book.rs  spsc.rs  startup.rs
crates/engine/src/connection/: fsm.rs  mod.rs
crates/engine/src/data/: data_source.rs  mod.rs  multi_day_source.rs  parquet_source.rs
crates/engine/src/order_manager/: bracket.rs  mod.rs  state_machine.rs  tracker.rs  wal.rs
crates/engine/src/paper/: data_feed.rs  mod.rs  orchestrator.rs
crates/engine/src/persistence/: journal.rs  mod.rs  parquet_writer.rs  query.rs
crates/engine/src/regime/: mod.rs  orchestrator.rs  threshold.rs
crates/engine/src/replay/: data_source.rs  determinism.rs  driver.rs  fill_sim.rs  mod.rs  orchestrator.rs
crates/engine/src/risk/: alerting.rs  anomaly_handler.rs  circuit_breakers.rs  event_windows.rs  fee_gate.rs  mod.rs  panic_mode.rs
crates/engine/src/signals/: composite.rs  levels.rs  microprice.rs  mod.rs  obi.rs  vpin.rs
crates/engine/tests/: composite_tests.rs  levels_tests.rs  microprice_tests.rs  obi_tests.rs  order_book_integration.rs  paper_trade_recording.rs  paper_trading.rs  position_reconciliation.rs  replay_determinism.rs  replay_orchestrator.rs  vpin_tests.rs
crates/engine/tests/data/: determinism_test.toml
crates/engine/tests/data/market/DETERMINISM/: 2026-04-18.parquet
crates/engine/tests/snapshots/: replay_determinism__determinism_baseline.snap
crates/testkit/: Cargo.toml
crates/testkit/src/: assertions.rs  book_builder.rs  lib.rs  market_gen.rs  mock_broker.rs  scenario.rs  sim_clock.rs
