[package]
name = "futures_core"
version = "0.1.0"
edition.workspace = true

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
