[package]
name = "futures_bmad_engine"
version = "0.1.0"
edition.workspace = true

[dependencies]
futures_bmad_core = { workspace = true }
futures_bmad_broker = { workspace = true }
tokio = { workspace = true }
rtrb = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
tikv-jemallocator = { workspace = true }
core_affinity = { workspace = true }
bumpalo = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
futures_bmad_testkit = { workspace = true }
tempfile = "3"
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml = { workspace = true }
