[package]
name = "futures_bmad_engine"
version = "0.1.0"
edition.workspace = true

[dependencies]
futures_bmad_core = { workspace = true }
futures_bmad_broker = { workspace = true }
futures_bmad_testkit = { workspace = true }
tokio = { workspace = true }
rtrb = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
tikv-jemallocator = { workspace = true }
core_affinity = { workspace = true }
bumpalo = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
# Story 7.3 — runtime config loader for `--paper`/`--live` mode selection
# reads `[broker] mode` from a TOML file via this crate.
toml = { workspace = true }

[[bin]]
name = "engine"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# Story 7.2 — snapshot regression tests for deterministic replay output.
# `yaml` feature gives stable, human-reviewable diff output via
# `assert_yaml_snapshot!`.
insta = { workspace = true, features = ["yaml"] }
